# better_versions

./: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
lib/: better_versions.dart
lib/src/: version_formatter.dart  version_manager.dart  version_patterns.dart
lib/src/platform/: android_version_manager.dart  android_version_manager.dart.bak  ios_version_manager.dart  linux_version_manager.dart  macos_version_manager.dart  platform.dart  version_manager_platform.dart  version_utils.dart  windows_version_manager.dart
test/: android_version_manager_test.dart  better_versions_test.dart  macos_version_manager_test.dart  test_version_managers.dart  version_formatter_test.dart  version_manager_test.dart  version_utils_test.dart
test/fixtures/ios/Runner/: Info.plist
test/fixtures/linux/: CMakeLists.txt
test/fixtures/macos/Runner/: Info.plist
test/fixtures/windows/runner/: Runner.rc
test/platform/: version_manager_platform_test.dart
